# routes/premiumRecipes.js
@@ -1,19 +1,14 @@
 const express = require('express');
 const router = express.Router();
 const premiumRecipesController = require('../controllers/premiumRecipes');
-const { validateRecipe, validateObjectId } = require('../util/recipeValidation');
+const { validateObjectId } = require('../util/recipeValidation');
 const { ensureAuthenticated } = require('../middleware/auth');
 
 // All premium recipe routes require authentication
+// Only GET endpoints are available for premium recipes
 router.get('/', ensureAuthenticated, premiumRecipesController.getAllPremiumRecipes);
 
 router.get('/:id', ensureAuthenticated, validateObjectId, premiumRecipesController.getPremiumRecipeById);
-
-router.post('/', ensureAuthenticated, validateRecipe, premiumRecipesController.createPremiumRecipe);
-
-router.put('/:id', ensureAuthenticated, validateObjectId, validateRecipe, premiumRecipesController.updatePremiumRecipe);
-
-router.delete('/:id', ensureAuthenticated, validateObjectId, premiumRecipesController.deletePremiumRecipe);
 
 module.exports = router;
 
